--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -10,21 +10,32 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Set the PREVIOUS_STABLE_ALPINE env
+        id: step_one
+        run: |
+          echo "PREVIOUS_STABLE_ALPINE=`curl -q https://dl-cdn.alpinelinux.org/alpine/ |grep ">v" | cut -d 'v' -f 2 | cut -d '/' -f 1  | sort --field-separator=. --version-sort | tail -2 | head -1`" >> $GITHUB_ENV
       - name: checkout code
         uses: actions/checkout@v2
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v1
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+      - name: Set the PREVIOUS_STABLE_ALPINE env
+        run: |
+          echo "Using alpine version: $PREVIOUS_STABLE_ALPINE"
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       # - name: Login to DockerHub
       #   uses: docker/login-action@v1
       #   with:
       #     username: ${{ secrets.DOCKER_USERNAME }}
       #     password: ${{ secrets.DOCKER_PASSWORD }}
-      # - name: Build and push
-      #   id: docker_build
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     push: true
-      #     platforms: linux/amd64,linux/arm64, linux/arm/v7
-      #     tags: ${{ github.repository }}:latest
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          # push: true
+          build-args: |
+            ALPINE_VERSION=${{ env.PREVIOUS_STABLE_ALPINE }}
+          platforms: linux/amd64,linux/arm64, linux/arm/v7
+          tags: |
+            ${{ github.repository }}:latest
+            ${{ github.repository }}:alpine-${{ env.PREVIOUS_STABLE_ALPINE }}
