--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -23,11 +23,12 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v1
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -40,5 +41,5 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
           platforms: linux/amd64,linux/arm64, linux/arm/v7
           tags: |
-            ${{ github.repository }}:latest
-            ${{ github.repository }}:alpine-${{ env.PREVIOUS_STABLE_ALPINE }}
+            ghcr.io/${{ github.repository }}:${{ env.PREVIOUS_STABLE_ALPINE }}
+            ghcr.io/${{ github.repository }}:latest
