--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,8 +1,9 @@
 name: Build and push
 
 on:
+  workflow_dispatch:
   push:
-    branches: master
+    branches: main
   schedule:
     - cron: '0 0 * * 0'
 
