--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -34,7 +34,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          # push: true
+          push: true
           build-args: |
             ALPINE_VERSION=${{ env.PREVIOUS_STABLE_ALPINE }}
           labels: |
