--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -42,5 +42,5 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
           platforms: linux/amd64,linux/arm64, linux/arm/v7
           tags: |
-            ghcr.io/${{ github.repository }}:alpine-${{ env.PREVIOUS_STABLE_ALPINE }}
-            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/$GH_USER/$PROGRAM_NAME:alpine-${{ env.PREVIOUS_STABLE_ALPINE }}
+            ghcr.io/$GH_USER/$PROGRAM_NAME:latest
