--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -7,6 +7,9 @@ on:
   schedule:
     - cron: '0 0 * * 0'
 
+env:
+  TEST_TAG: $GH_USER/$PROGRAM_NAME:test
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,6 +33,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
+      - name: Build and export to Docker
+        uses: docker/build-push-action@v2
+        with:
+          load: true
+          tags: ${{ env.TEST_TAG }}
+      - name: Test
+        run: |
+          docker run --rm ${{ env.TEST_TAG }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
