--- a/github/workflows/image.yml
+++ b/github/workflows/image.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set the PREVIOUS_STABLE_ALPINE env
         id: alpine_version_checker
         run: |
-          echo "::set-output name=PREVIOUS_STABLE_ALPINE::`curl -q https://dl-cdn.alpinelinux.org/alpine/ |grep ">v" | cut -d 'v' -f 2 | cut -d '/' -f 1  | sort --field-separator=. --version-sort | tail -2 | head -1`" >> $GITHUB_ENV
+          echo "::set-output name=PREVIOUS_STABLE_ALPINE::`curl -q https://dl-cdn.alpinelinux.org/alpine/ |grep ">v" | cut -d 'v' -f 2 | cut -d '/' -f 1  | sort --field-separator=. --version-sort | tail -2 | head -1`"
       - name: checkout code
         uses: actions/checkout@v2
       - name: Set up QEMU
